# connect_four

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  connect_four.db  connectfour.db  connectfour.toml
debian/: changelog  connectfour.desktop  connectfour.install  connectfour_refresh  connectfour_server  connectfour_server.desktop  connectfour_web  connectfour_ws  control  rules
debian/.debhelper/bucket/: index
debian/systemd/: connectfour.service  connectfour_web.service  connectfour_ws.service
migrations/20171210135621_users/: up.sql
migrations/20171220221059_game_in_progress/: down.sql  up.sql
src/: conf.rs  grid.rs  lib.rs  models.rs  schema.rs
static/: README.md  axios.js  index.html  package-lock.json  package.json  script.js  vue.js  webpack.config.js
static/public/: modal.js  user.js  ws.js  ws_events.js
static/src/: app.scss
static/src/components/: App.vue  ConnexionError.vue  Entry.vue  Grid.vue  Header.vue  Modal.vue  UserList.vue
static/src/css/: modal.css  style.css  style_old.css
static/src/js/: main.js  modal.js  server.js  user.js  ws.js  ws_events.js
static/src/scss/: app.scss
