[package]
name = "connectfour"
version = "0.1.0"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]

[dependencies]
toml = "0.4"
rouille = "2.1.0"
#cairo-rs = "^0"
#gdk      = "^0"
serde           = "1.0"
serde_derive    = "1.0"
env_logger      = "0.4"
ws              = "0.7"
log = "*"
time = "*"
serde_json = "*"
diesel = { version = "1.2.2", features = ["sqlite"] }
dotenv = "0.10.0"
uuid = { version = "0.5", features = ["v4"] }

#[dependencies.rocket_contrib]
#version = "0.3.1"
#default-features = false

#[dependencies.gtk]
#version = "0.3.0"
#features = ["v3_10"]
